--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               >
                 Инфографика
               </button>
-              <a href="#info-block-anchor"> Инфографика</a>
+              <button class="reset-swiper btn-reset"> Инфографика</button>
             </li>
             <li class="tabs__nav-item">
               <button
@@ -267,44 +267,31 @@
               </div>
               <ul class="info-graph-product-list list-reset">
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png"
-                    ><!-- <img src="./img/photo-model-1.png" alt=""
-                  /> --></a
-                  >
+                  <a href="./img/10.jpg" data-fancybox data-src="./img/10.jpg"
+                    ><img src="./img/10.jpg" alt=""
+                  /></a>
                 </li>
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png"
-                    ><!-- <img src="./img/photo-model-1.png" alt=""
-                  /> --></a
-                  >
+                  <a href="./img/9.jpg" data-fancybox data-src="./img/9.jpg"
+                    ><img src="./img/9.jpg" alt=""
+                  /></a>
                 </li>
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png"
-                    ><!-- <img src="./img/photo-model-1.png" alt=""
-                  /> --></a
-                  >
+                  <a href="./img/11.jpg" data-fancybox data-src="./img/11.jpg"
+                    ><img src="./img/11.jpg" alt=""
+                  /></a>
                 </li>
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png"
-                    ><!-- <img src="./img/photo-model-1.png" alt=""
-                  /> --></a
-                  >
+                  <a href="./img/12.jpg" data-fancybox data-src="./img/12.jpg"
+                    ><img src="./img/12.jpg" alt=""
+                  /></a>
                 </li>
               </ul>
               <button class="info-graph-more btn-reset">
                 <span class="all-project">Все проекты</span>
                 <span class="more-close">Свернуть</span>
 
-                <!--   <div class="icon-more">
 
-
-                  <div class="icon-more-lines">
-                    <div class="icon-more-line"></div>
-                  </div>
-                  <div class="icon-more-lines">
-                    <div class="icon-more-line"></div>
-                  </div>
-                </div> -->
                 <div class="icon-burger">
                   <img src="./img/icon_burger_on.svg" class="on" alt="" />
                   <img src="./img/icon_burger_off.svg" class="off" alt="" />
@@ -365,30 +352,26 @@
               <div class="swiper model-graph-swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <a class="is-desk" data-fancybox data-src="./img/photo-model-1.png"
+                    <a
+                      class="is-desk"
+                      data-fancybox
+                      data-src="./img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                     <a
                       class="is-mobile"
                       data-fancybox
                       data-src="./img/model-3d-1.png"
-
                       ><img src="./img/model-3d-1.png" alt=""
                     /></a>
                   </div>
                   <div class="swiper-slide">
-                    <a
-
-                      data-fancybox
-                      data-src="../img/photo-model-1.png"
+                    <a data-fancybox data-src="../img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                   </div>
                   <div class="swiper-slide">
-                    <a
-
-                      data-fancybox
-                      data-src="./img/photo-model-1.png"
+                    <a data-fancybox data-src="./img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                   </div>
