--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
   />
+
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
 
-
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  
+
   <link rel="stylesheet" href="css/vendor.css" />
   <link rel="stylesheet" href="css/main.css" />
   <script defer src="js/main.js"></script>
@@ -174,7 +174,7 @@
               <div class="swiper info-graph-swiper mobile first">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <a href="./img/12.jpg" data-fancybox data-src="./img/12.jpg"
+                    <a data-fancybox data-src="./img/12.jpg"
                       ><img src="./img/12.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
