--- a/index.html
+++ b/index.html
@@ -495,6 +495,9 @@
       style="display: none"
     >
       <div class="policy-popup__content">
+        <button class="is-close-btn">
+          <img src="./img/icon_close.svg" alt="" />
+        </button>
         <h2 class="policy-popup__title offset-popup">
           Политика<br />
           конфиденциальности
@@ -778,6 +781,9 @@
       style="display: none"
     >
       <div class="offer-popup__content">
+        <button class="is-close-btn">
+          <img src="./img/icon_close.svg" alt="" />
+        </button>
         <h2 class="offer-popup__title offset-popup">Публичная оферта</h2>
         <div class="offer-popup__info offset-popup">
           <div class="offer-popup__text">
