--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ if ('ontouchstart' in window).
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/9.jpg" data-fancybox data-src="./img/9.jpg"
+                    <a data-fancybox="images" data-src="./img/9.jpg"
                       ><img src="./img/9.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
@@ -212,7 +212,7 @@ if ('ontouchstart' in window).
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/10.jpg" data-fancybox data-src="./img/10.jpg"
+                    <a data-fancybox="images" data-src="./img/10.jpg"
                       ><img src="./img/10.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
@@ -225,7 +225,7 @@ if ('ontouchstart' in window).
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/11.jpg" data-fancybox data-src="./img/11.jpg"
+                    <a data-fancybox="images" data-src="./img/11.jpg"
                       ><img src="./img/11.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
