--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <!--  <a data-fancybox="images" data-src="./img/12.jpg"
                       ><img src="./img/12.jpg" alt=""
                     /></a> -->
-                    <a data-fancybox href="./img/12.jpg"
+                    <a data-fancybox="images" href="./img/12.jpg"
                       ><img src="./img/12.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
