--- a/index.html
+++ b/index.html
@@ -353,11 +353,12 @@
                   РОВАНИЕ
                 </h2>
                 <p class="hero__desc">
-                  Товар, который хочется купить с первого взгляда! Мы создаем
-                  фотореалистичные 3D модели товаров с качественными рендерами
-                  для маркетплейсов.<br /><br />В отличие от обычных фотографий,
-                  рендеры позволяют показать товар в лучшем виде,с максимальной
-                  детализацией, идеальными ракурсами и точной цветопередачей!
+                  Товар, который хочется купить с первого взгляда! Мы
+                  создаем фотореалистичные 3D модели товаров с качественными
+                  рендерами для маркетплейсов.<br /><br />В отличие от обычных
+                  фотографий, рендеры позволяют показать товар в&nbsp;лучшем виде, с
+                  максимальной детализацией, идеальными ракурсами и&nbsp;точной
+                  цветопередачей!
                 </p>
                 <a href="#telegram-popup" data-fancybox class="hero__link"
                   >Обсудить проект <img src="./img/button-link-icon.svg" alt=""
@@ -774,6 +775,9 @@
               </ol>
             </li>
           </ol>
+          <button type="button" class="popup-text-close btn-reset">
+            Вернуться на главную
+          </button>
         </div>
       </div>
     </div>
@@ -1147,6 +1151,9 @@
                 ><br />
               </li>
             </ol>
+            <button type="button" class="popup-text-close btn-reset">
+              Вернуться на главную
+            </button>
           </div>
         </div>
       </div>
